Update navigation links for agent commerce insights

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             <!-- Navigation Links -->
             <nav class="flex flex-col space-y-5">
                 <!-- Link to View 1 -->
-                <a href="view1.html" 
+                <a href="agent-commerce-insight-view1.html" 
                    class="w-full bg-blue-600 text-white text-lg font-semibold py-4 px-6 rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
-                    View 1: Dashboard Overview
+                    View 1: Agentic Commerce Insights
                 </a>
                 
                 <!-- Link to View 2 -->
-                <a href="view2.html" 
+                <a href="agent-commerce-insight-view2.html" 
                    class="w-full bg-gray-700 text-white text-lg font-semibold py-4 px-6 rounded-lg shadow-md hover:bg-gray-800 focus:outline-none focus:ring-4 focus:ring-gray-300 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
-                    View 2: Detailed Analytics
+                    View 1: Agentic Commerce Insights
                 </a>
             </nav>
             
