--- a/agent-commerce-insight-view1.html
+++ b/agent-commerce-insight-view1.html
@@ -54,7 +54,13 @@
     </header>
 
     <main class="container mx-auto p-4 md:p-8 max-w-7xl">
-
+<!-- Styled "Back to Home" Button -->
+<div class="p-4">
+    <a href="index.html" 
+       class="inline-block bg-gray-200 text-gray-800 font-medium py-2 px-4 rounded-lg shadow-sm hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 transition-all duration-200">
+        &larr; Back to Home
+    </a>
+</div>
         <section class="text-center my-12 md:my-16">
             <h2 class="text-3xl font-bold mb-4" style="color: #673AB7;">From Clicks to Conversations</h2>
             <p class="text-lg max-w-3xl mx-auto mb-8">Agentic commerce shifts e-commerce from a manual, user-driven search process (clicks) to an automated, AI-driven delegation process (conversations). Users state their complex intent, and AI agents execute tasks on their behalf.</p>
