--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <nav class="flex mb-6 rounded-lg overflow-hidden">
                 <button id="tab-view1" 
                         class="flex-1 py-3 px-4 font-semibold text-center transition-all duration-300 ease-in-out tab-active">
-                    View 1: Dashboard
+                    View 1:
                 </button>
                 <button id="tab-view2" 
                         class="flex-1 py-3 px-4 font-semibold text-center transition-all duration-300 ease-in-out tab-inactive">
-                    View 2: Analytics
+                    View 2:
                 </button>
             </nav>
             
@@ -50,7 +50,7 @@
             <main>
                 <!-- Content for View 1 (Visible by default) -->
                 <div id="content-view1" class="">
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">Dashboard Overview</h2>
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">Agentic Commerce Overview</h2>
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 min-h-[300px]">
                         <!-- 
                           START: VIEW 1 CONTENT
@@ -110,13 +110,6 @@
     </header>
 
     <main class="container mx-auto p-4 md:p-8 max-w-7xl">
-<!-- Styled "Back to Home" Button -->
-<div class="p-4">
-    <a href="index.html" 
-       class="inline-block bg-gray-200 text-gray-800 font-medium py-2 px-4 rounded-lg shadow-sm hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 transition-all duration-200">
-        &larr; Back to Home
-    </a>
-</div>
         <section class="text-center my-12 md:my-16">
             <h2 class="text-3xl font-bold mb-4" style="color: #673AB7;">From Clicks to Conversations</h2>
             <p class="text-lg max-w-3xl mx-auto mb-8">Agentic commerce shifts e-commerce from a manual, user-driven search process (clicks) to an automated, AI-driven delegation process (conversations). Users state their complex intent, and AI agents execute tasks on their behalf.</p>
@@ -502,7 +495,7 @@
                 
                 <!-- Content for View 2 (Hidden by default) -->
                 <div id="content-view2" class="hidden">
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">Detailed Analytics</h2>
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">View 2</h2>
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 min-h-[300px]">
                         <!-- 
                           START: VIEW 2 CONTENT
@@ -579,13 +572,6 @@
     </style>
 </head>
 <body class="antialiased">
-<!-- Styled "Back to Home" Button -->
-<div class="p-4">
-    <a href="index.html" 
-       class="inline-block bg-gray-200 text-gray-800 font-medium py-2 px-4 rounded-lg shadow-sm hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 transition-all duration-200">
-        &larr; Back to Home
-    </a>
-</div>
     <header class="w-full py-12 md:py-20" style="background-color: #F8F5F2;">
         <div class="container mx-auto max-w-7xl px-8 text-center">
             <h1 class="text-4xl md:text-6xl font-bold text-header mb-4">The Agentic Commerce Revolution</h1>
