--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <nav class="flex mb-6 rounded-lg overflow-hidden">
                 <button id="tab-view1" 
                         class="flex-1 py-3 px-4 font-semibold text-center transition-all duration-300 ease-in-out tab-active">
-                    View 1:
+                    View 1
                 </button>
                 <button id="tab-view2" 
                         class="flex-1 py-3 px-4 font-semibold text-center transition-all duration-300 ease-in-out tab-inactive">
-                    View 2:
+                    View 2
                 </button>
             </nav>
             
@@ -50,7 +50,7 @@
             <main>
                 <!-- Content for View 1 (Visible by default) -->
                 <div id="content-view1" class="">
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">Agentic Commerce Overview</h2>
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-4"></h2>
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 min-h-[300px]">
                         <!-- 
                           START: VIEW 1 CONTENT
@@ -495,7 +495,7 @@
                 
                 <!-- Content for View 2 (Hidden by default) -->
                 <div id="content-view2" class="hidden">
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">View 2</h2>
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">Agentic Commerce Overview</h2>
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 min-h-[300px]">
                         <!-- 
                           START: VIEW 2 CONTENT
