--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 
                 <!-- Content for View 2 (Hidden by default) -->
                 <div id="content-view2" class="hidden">
-                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">Agentic Commerce Overview</h2>
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-4"></h2>
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 min-h-[300px]">
                         <!-- 
                           START: VIEW 2 CONTENT
