--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </head>
 <body class="bg-gray-100 text-gray-900">
     <!-- Main container -->
-    <div class="flex items-center justify-center min-h-screen py-12 px-4">
+    <div class="min-h-screen">
         
         <!-- Main Card -->
-        <div class="bg-white p-6 sm:p-10 rounded-xl shadow-lg w-full max-w-4xl text-left">
+        <div class="bg-white p-6 sm:p-10 w-full text-left min-h-screen">
             
             <!-- Header -->
             <header class="mb-6 border-b border-gray-200 pb-4">
